@@ -1,7 +1,7 @@
 Package: aroma.apd
 Version: 0.4.1
 Depends: R (>= 2.15.0)
-Imports: R.methodsS3 (>= 1.5.2), R.oo (>= 1.15.8), R.utils (>= 1.28.4), R.huge (>= 0.6.0)
+Imports: R.methodsS3 (>= 1.6.1), R.oo (>= 1.15.8), R.utils (>= 1.28.4), R.huge (>= 0.6.1)
 Suggests: affxparser
 Date: 2014-01-05
 Title: A probe-level data file format used by aroma.affymetrix [DEPRECATED]
