@@ -40,7 +40,7 @@
 
 \examples{
 # Scan for CEL files
-files <- list.files(pattern="[.](c|C)(e|E)(l|L)$")
+files <- list.files(pattern="[.](cel|CEL)$")
 
 # Convert each to RAW file
 for (file in files) {
