@@ -51,10 +51,10 @@ rotate270 <- function(x, ...) {
 }
 
 # Scan current directory for APD files
-files <- list.files(pattern="[.](a|A)(p|P)(d|D)$")
+files <- list.files(pattern="[.](apd|APD)$")
 files <- files[!file.info(files)$isdir]
 if (length(files) > 0) {
-  apdFile <- files[1];
+  apdFile <- files[1]
  
   # Read APD intensities in the upper left corner
   apd <- readApdRectangle(apdFile, xrange=c(0,250), yrange=c(0,250))
