@@ -2,6 +2,8 @@ Package: aroma.apd
 ==================
 
 Version: 0.4.1 [2014-01-05]
+o Now celToApd() throws a more informative error message if it fails
+  to located an APD map file.
 o Now the 'aroma.apd' Package object is also available when the
   package is only loaded (but not attached).
 o CLEANUP: Removed unnecessary import statements from NAMESPACE.
